--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -6,4 +6,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MaterialDesignColors" Version="2.0.3" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Prevu.Synoptics.V1545\Prevu.Synoptics.V1545.csproj" />
+  </ItemGroup>
+
 </Project>
