--- a/Prevu.Localization/Prevu.Localization.csproj
+++ b/Prevu.Localization/Prevu.Localization.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +22,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\Prevu.Localization.dll&quot; -d P1010 put Prevu.Localization.dll&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\en\Prevu.Localization.resources.dll&quot; -d V6666 put Prevu.Localization.resources.en&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\it\Prevu.Localization.resources.dll&quot; -d V6666 put Prevu.Localization.resources.it&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\de\Prevu.Localization.resources.dll&quot; -d V6666 put Prevu.Localization.resources.de&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\ar\Prevu.Localization.resources.dll&quot; -d V6666 put Prevu.Localization.resources.ar&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-stefanor2:27017/&quot; -r -l &quot;$(TargetDir)\zh\Prevu.Localization.resources.dll&quot; -d V6666 put Prevu.Localization.resources.zh" />
+    <Exec Command="mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\Prevu.Localization.dll&quot; -d P1010 put Prevu.Localization.dll&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\en\Prevu.Localization.resources.dll&quot; -d P1010 put Prevu.Localization.resources.en&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\it\Prevu.Localization.resources.dll&quot; -d P1010 put Prevu.Localization.resources.it&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\de\Prevu.Localization.resources.dll&quot; -d P1010 put Prevu.Localization.resources.de&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\ar\Prevu.Localization.resources.dll&quot; -d P1010 put Prevu.Localization.resources.ar&#xD;&#xA;mongofiles --uri &quot;mongodb://lt-gregm2:27017/?readPreference=primaryPreferred&quot; -r -l &quot;$(TargetDir)\zh\Prevu.Localization.resources.dll&quot; -d P1010 put Prevu.Localization.resources.zh" />
   </Target>
 
 </Project>
