Add Transparent Color (None) to CV_Valve_001

--- a/Prevu.Drawings/Prevu.Drawings.csproj
+++ b/Prevu.Drawings/Prevu.Drawings.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Machines\CV_Valve_001.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="Machines\CV_Valve_002.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
