--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prevu.Synoptics.P1023\Prevu.Synoptics.P1023.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.P1023_ALZATE\Prevu.Synoptics.P1023_ALZATE.csproj" />
   </ItemGroup>
 
 </Project>
