--- a/Prevu.Synoptics.P1023_ALZATE/Prevu.Synoptics.P1023_ALZATE.csproj
+++ b/Prevu.Synoptics.P1023_ALZATE/Prevu.Synoptics.P1023_ALZATE.csproj
@@ -9,13 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MaterialDesignColors" Version="2.0.3" />
-    <PackageReference Include="MaterialDesignThemes" Version="4.2.1" />
-    <PackageReference Include="Prevu.UIComponents" Version="1.0.1" />
+    <PackageReference Include="MaterialDesignColors" Version="2.0.4" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
+    <PackageReference Include="Prevu.UIComponents" Version="1.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Prevu.UIComponents">
+      <HintPath>bin\Debug\net6.0-windows10.0.22000.0\Prevu.UIComponents.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
