Move Drawings to folders

--- a/Prevu.Drawings/Prevu.Drawings.csproj
+++ b/Prevu.Drawings/Prevu.Drawings.csproj
@@ -15,17 +15,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="Machines\GR_001.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="Machines\NASTRO.xaml">
+    <Page Update="Machines\Conveyors\ConveyorBelts\NASTRO.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="Machines\CV_Valve_001.xaml">
+    <Page Update="Machines\Valves\CV_Valve_001.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
