--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prevu.Synoptics.P1023_ALZATE\Prevu.Synoptics.P1023_ALZATE.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.P1010\Prevu.Synoptics.P1010.csproj" />
   </ItemGroup>
 
 </Project>
