Add DR1 synoptic

--- a/Prevu.Synoptics.V2451_Biffa/Prevu.Synoptics.V2451_Biffa.csproj
+++ b/Prevu.Synoptics.V2451_Biffa/Prevu.Synoptics.V2451_Biffa.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="DR1.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="WH.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
