--- a/Prevu.Synoptics.V2451_Biffa/Prevu.Synoptics.V2451_Biffa.csproj
+++ b/Prevu.Synoptics.V2451_Biffa/Prevu.Synoptics.V2451_Biffa.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.0.4" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
-    <PackageReference Include="Prevu.UIComponents" Version="1.0.7" />
+    <PackageReference Include="Prevu.UIComponents" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,16 +19,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="DR1.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="WH.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Update="PlantView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="ST.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="WH1.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="WH2.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
 
