--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
@@ -48,7 +48,7 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="HW1.xaml">
+    <Page Update="330.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
