--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -12,7 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prevu.Synoptics.P1023_ALZATE\Prevu.Synoptics.P1023_ALZATE.csproj" />
+    <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
+    <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
   </ItemGroup>
 
 </Project>
