Move signals to D810

--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -18,6 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D810.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Update="G350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
