Change synoptic name

--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -24,37 +24,37 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="G350.xaml">
+    <Page Update="P350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="G514.xaml">
+    <Page Update="P514.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="G230.xaml">
+    <Page Update="P230.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="G330.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="G520.xaml">
+    <Page Update="P330.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="G380.xaml">
+    <Page Update="P520.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="G490.xaml">
+    <Page Update="P380.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="G460.xaml">
+    <Page Update="P490.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="G810.xaml">
+    <Page Update="P460.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="P810.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
