--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -24,6 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="D514.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D520.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
