Add detail synoptic

--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D09971EXT.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -34,6 +37,9 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="D520.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D09971EXT.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P350.xaml">
