--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
@@ -19,6 +19,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="D997.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="D880.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="D020.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
