--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
   </ItemGroup>
 
 </Project>
