--- a/Prevu.Synoptics.P1010/Prevu.Synoptics.P1010.csproj
+++ b/Prevu.Synoptics.P1010/Prevu.Synoptics.P1010.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignColors" Version="2.0.9" />
     <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
     <PackageReference Include="Prevu.UIComponents" Version="1.2.4" />
   </ItemGroup>
