--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -25,7 +25,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="D09971EXT.xaml.cs">
+    <Compile Update="D099.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D320.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D810_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D810.xaml.cs">
@@ -40,7 +46,7 @@
     <Page Update="D520.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D09971EXT.xaml">
+    <Page Update="D099.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P350.xaml">
