Add detail synoptic

--- a/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
+++ b/Prevu.Synoptics.V3001-COVERIS/Prevu.Synoptics.V3001-COVERIS.csproj
@@ -28,6 +28,9 @@
     <Compile Update="D099.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D320_2.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D320.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
