--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
@@ -20,6 +20,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="D887.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D885.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D883.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="D997.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
