Update for Infinya

--- a/Prevu.Synoptics.V2932_Infinya/Prevu.Synoptics.V2932_Infinya.csproj
+++ b/Prevu.Synoptics.V2932_Infinya/Prevu.Synoptics.V2932_Infinya.csproj
@@ -18,10 +18,14 @@
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
   </ItemGroup>
 
+
   <ItemGroup>
     <Page Update="PlantView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+		<Page Update="SHsmall.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+		</Page>
   </ItemGroup>
 
 </Project>
