--- a/Prevu.Synoptics.V2502_Polymer_Processor/Prevu.Synoptics.V2502_Polymer_Processor.csproj
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/Prevu.Synoptics.V2502_Polymer_Processor.csproj
@@ -18,6 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D101.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <Page Update="D484.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
