V3085 Anviplas - Inizio Sinottici

--- a/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
+++ b/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
@@ -18,4 +18,25 @@
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="D298.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="P020.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P230.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P464.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P510.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+
 </Project>
