V3168 Sirplaste Update Sinottici

--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -21,6 +21,24 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D999_2.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D999.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D998_2.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D998.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D997_2.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D997.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D873.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -30,6 +48,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="P997.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P810.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
