--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -21,6 +21,12 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D220.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D430.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D999_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
