--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -18,28 +18,34 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D354.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D220.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D371.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D430.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D999_2.xaml.cs">
+    <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D999.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D998_2.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Update="D998.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D997_2.xaml.cs">
+    <Compile Update="D999_2.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D998_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D997.xaml.cs">
@@ -48,12 +54,12 @@
     <Compile Update="D873.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D810.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="D530.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P997.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
@@ -81,7 +87,7 @@
     <Page Update="P350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P371.xaml">
+    <Page Update="P970.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P430.xaml">
