Update Prevu.Synoptics Template

--- a/Prevu.Synoptics/Prevu.Synoptics.csproj
+++ b/Prevu.Synoptics/Prevu.Synoptics.csproj
@@ -17,4 +17,25 @@
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="D354.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D376.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D810.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D997.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="WaterView.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+
 </Project>
