--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V3168_Sirplaste\Prevu.Synoptics.V3168_Sirplaste.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3510_Greentech_Romania\Prevu.Synoptics.V3510_Greentech_Romania.csproj" />
   </ItemGroup>
 
 </Project>
