--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,7 +15,13 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2451_Biffa\Prevu.Synoptics.V2451_Biffa.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2502_Polymer_Processor\Prevu.Synoptics.V2502_Polymer_Processor.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2932_Infinya\Prevu.Synoptics.V2932_Infinya.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3168_Sirplaste\Prevu.Synoptics.V3168_Sirplaste.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3510_Greentech_Romania\Prevu.Synoptics.V3510_Greentech_Romania.csproj" />
   </ItemGroup>
 
 </Project>
