V3510 Update Dettaglio filtro a maniche + immagine VT_CMM

--- a/Prevu.Synoptics.V3510_Greentech_Romania/Prevu.Synoptics.V3510_Greentech_Romania.csproj
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/Prevu.Synoptics.V3510_Greentech_Romania.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D896.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
