--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -36,6 +36,9 @@
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D970.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D999.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -59,6 +62,9 @@
   <ItemGroup>
     <Page Update="D530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D970.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Update="P997.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
@@ -85,9 +91,6 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P350.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="P970.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P430.xaml">
