--- a/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
+++ b/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D470.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D460.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D298.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -34,19 +40,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="D550.xaml">
+    <Page Update="D510.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D520.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="D540.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D510.xaml">
+    <Page Update="D550.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D560.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P020.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="P210.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P230.xaml">
@@ -61,14 +73,23 @@
     <Page Update="P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="P474.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P464.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P510.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P810.xaml">
+    <Page Update="P520.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P570.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="PlantView.xaml">
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
 
