V2048 Update pagine Overview

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Prevu.Synoptics.V2048-ReCiclar_CMF.csproj
@@ -29,6 +29,9 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D430.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D446.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -97,7 +100,7 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="P420.xaml">
+    <Page Update="P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
