Update Template Synoptics

--- a/Prevu.Synoptics/Prevu.Synoptics.csproj
+++ b/Prevu.Synoptics/Prevu.Synoptics.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
+    <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
   </ItemGroup>
 
   <ItemGroup>
