--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2451_Biffa\Prevu.Synoptics.V2451_Biffa.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2502_Polymer_Processor\Prevu.Synoptics.V2502_Polymer_Processor.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2932_Infinya\Prevu.Synoptics.V2932_Infinya.csproj" />
