--- a/Prevu.Synoptics/Prevu.Synoptics.csproj
+++ b/Prevu.Synoptics/Prevu.Synoptics.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.1.2" />
     <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
-    <PackageReference Include="Prevu.UIComponents" Version="1.2.6" />
+    <PackageReference Include="Prevu.UIComponents" Version="1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
