V2150 aggiornamento plantview + correzioni

--- a/Prevu.Synoptics.V2150_Planeta/Prevu.Synoptics.V2150_Planeta.csproj
+++ b/Prevu.Synoptics.V2150_Planeta/Prevu.Synoptics.V2150_Planeta.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D028.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D018.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D107.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -101,9 +107,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="D020_2.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
     <Page Update="D020.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
@@ -152,7 +155,7 @@
     <Page Update="D890.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P018.xaml">
+    <Page Update="P020.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P100.xaml">
