V3255 SF-Added Synoptic of Q42

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -21,7 +21,8 @@
     <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3168_Sirplaste\Prevu.Synoptics.V3168_Sirplaste.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V3255_Mazzuchelli\Prevu.Synoptics.V3255-1_Mazzuchelli.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3255-2_Mazzuchelli\Prevu.Synoptics.V3255-Q42_Mazzuchelli.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3255_Mazzuchelli\Prevu.Synoptics.V3255-Q41_Mazzuchelli.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3510_Greentech_Romania\Prevu.Synoptics.V3510_Greentech_Romania.csproj" />
   </ItemGroup>
 
