Update Progetto Test: commento su xaml

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,7 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V3168_Sirplaste\Prevu.Synoptics.V3168_Sirplaste.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3870-Center_Gomma\Prevu.Synoptics.V3870-Center_Gomma.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4088-Polimero\Prevu.Synoptics.V4088-Polimero.csproj" />
   </ItemGroup>
 
 </Project>
