--- a/Prevu.Synoptics.V3870-Center_Gomma/Prevu.Synoptics.V3870-Center_Gomma.csproj
+++ b/Prevu.Synoptics.V3870-Center_Gomma/Prevu.Synoptics.V3870-Center_Gomma.csproj
@@ -5,6 +5,7 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>Prevu.Synoptics.V3870_Center_Gomma</RootNamespace>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+    <AssemblyName>Prevu.Synoptics</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
