--- a/Prevu.Synoptics.V3870-Center_Gomma/Prevu.Synoptics.V3870-Center_Gomma.csproj
+++ b/Prevu.Synoptics.V3870-Center_Gomma/Prevu.Synoptics.V3870-Center_Gomma.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
     <UseWPF>true</UseWPF>
-    <RootNamespace>Prevu.Synoptics.V3870_Center_Gomma</RootNamespace>
+    <RootNamespace>Prevu.Synoptics</RootNamespace>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <AssemblyName>Prevu.Synoptics</AssemblyName>
   </PropertyGroup>
