--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2502_Polymer_Processor\Prevu.Synoptics.V2502_Polymer_Processor.csproj" />
   </ItemGroup>
 
 </Project>
