--- a/Prevu.Synoptics.V2150_Planeta/Prevu.Synoptics.V2150_Planeta.csproj
+++ b/Prevu.Synoptics.V2150_Planeta/Prevu.Synoptics.V2150_Planeta.csproj
@@ -71,13 +71,13 @@
     <Compile Update="D487.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="D820.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D485.xaml.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Update="D820.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D953.xaml.cs">
@@ -113,9 +113,6 @@
     <Page Update="D195.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D175.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
     <Page Update="D170.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
@@ -124,6 +121,9 @@
     </Page>
     <Page Update="D180.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D510_2.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Update="D557.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
@@ -167,6 +167,9 @@
     <Page Update="P140.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="P340.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P608.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
@@ -177,9 +180,6 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P268.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="P340.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P330.xaml">
